--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello World</h1>
-        <p> I'm hosted with GitHub Pages.</p>
-    </body>
+    <head>
+        <style>
+            .centered-text{
+                text-align: center;
+                font-size: 24px;
+            }
+        </style>
+    </head>
+
+    <div class ="center-container">
+        <body>
+            <h1>Hello World</h1>
+            <p> I'm hosted with GitHub Pages.</p>
+        </body>
+
+    </div>
 </html>
