--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <head>
         <style>
+            body{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+                background-color: black;
+                color: white;
+            }
             .centered-text{
                 text-align: center;
                 font-size: 24px;
