--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <style>
+            @font-face {
+            font-family: 'giga';
+            src: url('https://github.com/liamung/liamung.github.io/blob/main/Giga.woff') format('woff');
+            }
+            body{
+            margin: 20px;
+            font-family: 'giga', sans-serif;
+            }
             body{
                 display: flex;
                 justify-content: center;
