--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <style>
             @font-face {
             font-family: 'giga';
-            src: url('https://github.com/liamung/liamung.github.io/blob/main/Giga.woff') format('woff');
+            src: url('Giga.woff') format('woff');
             }
             body{
             margin: 20px;
