Added welcome page to home page

--- a/homepage.html
+++ b/homepage.html
@@ -20,8 +20,8 @@
 
     <div class ="center-container">
         <body>
-            <h1><a href="homepage.html">Hello World!</a></h1>
-            <p>Press on the "Hello World!" to proceed.</p>
+            <h1>This page hosts all relevant work I've done.</h1>
+            <p>Atleast, relevant relating to engineering.</p>
         </body>
 
     </div>
