--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class ="center-container">
         <body>
-            <h1><a href="homepage.html">Hello World!</a></h1>
+            <h1><a style="color: white; text-decoration:none" href="homepage.html">Hello World!</a></h1>
             <p>Press on the "Hello World!" to proceed.</p>
         </body>
 
