--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            body{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin: 0;
-                background-color: black;
-                color: white;
-            }
-            .centered-text{
-                text-align: center;
-                font-size: 24px;
-            }
-        </style>
-    </head>
 
-    <div class ="center-container">
-        <body>
-            <h1><a style="color: white; text-decoration:none" href="homepage.html">Hello World!</a></h1>
-            <p>Press on the "Hello World!" to proceed.</p>
-        </body>
+<head>
+    <title>Haite</title>
+    <link rel="icon" type="image/x-icon" href="smiley_face.ico">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="banner">
+        <div class="navbar">
+        <img src="image.png" class="logo">
+            <ul>
+                <li><a href='#'>projects</a></li>
+                <li><a href='#'>problems</a></li>
+                <li><a href='#'>advice</a></li>
+                <li><a href='#'>other</a></li>
+            </ul>
+        </div>
 
+        <div class="content">
+            <h1>balls</h1>
+            <p>hi</p>
+        </div>
     </div>
+</body>
 </html>
