--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
         <div class="navbar">
         <img src="image.png" class="logo">
             <ul>
-                <li><a href='#'>projects</a></li>
+                <li><a href='projects.html'>projects</a></li>
                 <li><a href='#'>problems</a></li>
                 <li><a href='#'>advice</a></li>
                 <li><a href='#'>other</a></li>
+                <li><a href='#'>contact</a></li>
             </ul>
         </div>
 
         <div class="content">
-            <h1>balls</h1>
-            <p>hi</p>
+            <h1>my name is liam ung.</h1>
+            <p>welcome to my website. i am violating basic grammar rules because i feel like capitalizng my text would come off too stiff.</p>
         </div>
     </div>
 </body>
