--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href='projects.html'>projects</a></li>
                 <li><a href='#'>problems</a></li>
-                <li><a href='#'>advice</a></li>
+                <li><a href='advice.html'>advice</a></li>
                 <li><a href='#'>other</a></li>
                 <li><a href='#'>contact</a></li>
             </ul>
