--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Haite</title>
+    <title>liamverse</title>
     <link rel="icon" type="image/x-icon" href="smiley_face.ico">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,10 +12,10 @@
         <img src="image.png" class="logo">
             <ul>
                 <li><a href='projects.html'>projects</a></li>
-                <li><a href='#'>problems</a></li>
+                <li><a href='problems.html'>problems</a></li>
                 <li><a href='advice.html'>advice</a></li>
-                <li><a href='#'>other</a></li>
-                <li><a href='#'>contact</a></li>
+                <li><a href='other.html'>other</a></li>
+                <li><a href='contact.html'>contact</a></li>
             </ul>
         </div>
 
