--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,11 @@
           <h2>web scraper | sep. 2023 - sep. 2023</h2>
           <p>goal: develop a web scraper utilizing the python library "beautiful soup"</p>
         </li>
+        <li>
+            <h2>crystal radio | TBD</h2>
+            <p>goal: develop a primitive radio utilizing basic materials including tin foil, copper</p>
+            <p>wire, cardboard paper roll and a germanium diode. also earbuds to listen to it</p>
+          </li>
       </ul>
     </div>
   </body>
