--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         </li>
         <li>
           <h2>web scraper | sep. 2023 - sep. 2023</h2>
-          <p>goal: develop a web scraper utilizing the python library "beautiful soup"</p>
+          <p>goal: develop a web scraper utilizing the python library "selenium"</p>
         </li>
         <li>
             <h2>crystal radio | TBD</h2>
