--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <link rel="stylesheet" href="style.css">
+      <title>projects</title>
     </head>
   <body>
     <div class="project">
