--- a/problems.html
+++ b/problems.html
@@ -2,6 +2,7 @@
 <html>
     <head>
       <title>problems</title>
+      <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
   <body>
