--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang>
 
 <head>
     <title>liamverse</title>
@@ -9,7 +9,7 @@
 <body>
     <div class="banner">
         <div class="navbar">
-        <img src="image.png" class="logo">
+        <img src="image.png" class="logo" alt>
             <ul>
                 <li><a href='projects.html'>projects</a></li>
                 <li><a href='problems.html'>problems</a></li>
