--- a/other.html
+++ b/other.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang>
     <head>
       <title>other</title>
       <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="project">
+  <body class="project">
+    <div class="aproj">
       <h1>other.</h1>
       <p>will include geopolitical topics, cooking, personal stories and maybe hopefully book reviews.<br>
     </br>possibly the least useful or most useful section of this website for you.<br>
