--- a/problems.html
+++ b/problems.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang>
     <head>
       <title>problems</title>
       <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="project">
+  <body class="project">
+    <div class="aproj">
       <h1>problems.</h1>
       <p>problems ranging from mathematics to coding to science.<br>
     </br>i intend to continue filling up this section with my leetcode, dmoj and cemc ccc solutions and thought processes.<br>
