--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang>
     <head>
       <title>projects</title>
       <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="project">
-      <h1>projects...</h1>
+  <body class ="project">
+    <div class = "aproj">
+      <h1>projects.</h1>
       <p>planned, in-progress and completed projects related to computer, electrical and software engineering.<br></br></p> 
       <h2>completed.</h2>
       <ul>
@@ -49,6 +49,7 @@
           <p>to auto-balance a spherical object rolling on the platform and prevent it from rolling off</p>
         </li>
       </ul>
+      <br></br>
     </div>
   </body>   
 </html>
