--- a/advice.html
+++ b/advice.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang>
     <head>
       <title>advice</title>
       <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="project">
+  <body class="project">
+    <div class="aproj">
       <h1>advice.</h1>
       <p>in-progress... i intend to include personal advice regarding uWaterloo, highschool and personal life.<br></br>for now, my advice is to return to this section at a later date...<br></br></p>
       <h2>highschool.</h2>
