--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang>
     <head>
       <title>contact</title>
       <link rel="icon" type="image/x-icon" href="smiley_face.ico">
       <link rel="stylesheet" href="style.css">
     </head>
-  <body>
-    <div class="project">
+  <body class="project">
+    <div class="aproj">
       <h1>contact.</h1>
       <p>github: <a target=”_blank” style="text-decoration:none; color: white" href="https://github.com/liamung">liamung</a><br></br>email: <a target=”_blank” style="text-decoration:none; color: white"href="mailto:liam.ung@uwaterloo.ca">liam.ung@uwaterloo.ca</a>
         <br></br>linkedin: <a target=”_blank” style="text-decoration:none; color: white" href="https://www.linkedin.com/in/liam-ung-5368b7273/">liam ung</a></p>
