--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="content">
             <h1>my name is liam ung.</h1>
-            <p>welcome to my website. i am violating basic grammar rules because i feel like capitalizing my text would come off too stiff.</p>
+            <p>welcome to my website. i feel like capitalizing my text would come off too stiff.</p>
         </div>
     </div>
 </body>
