--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,11 @@
       <p>planned, in-progress and completed projects related to computer, electrical and software engineering.<br></br></p> 
       <h2>completed.</h2>
       <ul>
+        <li>  
+          <h2>personal website | sep. 2022 - sep. 2023</h2>
+          <p>info: solo</p>
+          <p>goal: develop a personal log of all projects, advice for others and other ramblings.</p>
+        </li>
         <li>
           <h2>web scraper | sep. 2023 - sep. 2023</h2>
           <p>info: solo</p>
@@ -18,20 +23,12 @@
           <p>result: developped a backend program that prompts user for a ticker and correlating market to assemble an excel sheet</p>
           <p>including all relevant financial metrics along side relevant and relating news articles. data scraped from Google Finanace</p>
         </li>
-      </ul>
-      <h2>in-progress.</h2>
-      <ul>
         <li> 
-          <h2>emg prosthetic hand | sep. 2023 - present</h2>
+          <h2>emg prosthetic hand | sep. 2023 - nov. 2023</h2>
           <p>info: two members, progress may be posted via youtube</p>
           <p>goal: develop a sub 50 dollar prosthetic hand using 3D-printed parts, STM32 microprocessor, emg sensors and c++.</p>
           <p>this project is meant to explore affordable prosthetics for individuals waiting to receive their proper prosthetic</p>
-          <p>and for individuals who cannot afford a proper prosthetic currently</p>
-        </li>
-        <li>  
-          <h2>personal website | sep. 2022 - present</h2>
-          <p>info: solo</p>
-          <p>goal: develop a personal log of all projects, advice for others and other ramblings</p>
+          <p>and for individuals who cannot afford a proper prosthetic currently.</p>
         </li>
       </ul>
       <h2>planned.</h2>
@@ -40,13 +37,22 @@
             <h2>crystal radio | TBD</h2>
             <p>info: solo</p>
             <p>goal: develop a primitive radio utilizing basic materials including tin foil, copper</p>
-            <p>wire, cardboard paper roll and a germanium diode. also earbuds to listen to it</p>
+            <p>wire, cardboard paper roll and a germanium diode. also earbuds to listen to it.</p>
         </li>
         <li>
           <h2>auto-balancing platform | TBD</h2>
           <p>info: two members</p>
           <p>goal: utilizing gyroscopic technology, develop a small platform powered by four pistons and a microprocessor</p>
-          <p>to auto-balance a spherical object rolling on the platform and prevent it from rolling off</p>
+          <p>to auto-balance a spherical object rolling on the platform and prevent it from rolling off.</p>
+        </li>
+      </ul>
+      <h2>in-progress.</h2>
+      <ul>
+        <li>
+          <h2>clothing-detection neural network | feb. 2024 - present</h2>
+          <p>info: solo</p>
+          <p>goal: utilizing pytorch, implement a clothing-detection neural network.</p>
+          <p>eventually integrate the neural network into an app to allow indecisive individuals to pick clothes in the morning.</p>
         </li>
       </ul>
       <br></br>
